# pytorch_kan

./: .gitignore  Dockerfile  Dockerfile.cuda  LICENSE  MANIFEST.in  README.md  build-docs.sh  create_favicon.py  main.py  makefile  pyproject.toml  requirements.txt  setup.py  tox.ini
docs/: Makefile  make.bat
docs/source/: changelog.md  conf.py  contributing.md  index.md  installation.md  quickstart.md
docs/source/_static/: custom.css  prevent-flash.js
docs/source/_templates/: indexpage.html  layout.html
docs/source/modules/: basis.md  index.md  nn.md
docs/source/theory/: approximation_theory.md  basis_functions.md  index.md  kolmogorov_arnold_theorem.md
docs/source/tutorials/: comparing_basis_functions.md  custom_basis_functions.md  function_approximation.md  index.md  mnist_classification.md
docs_venv/: pyvenv.cfg
dump/: MatrixKAN.py
kan/: README.md  __init__.py
kan/nn/: README.md  __init__.py
kan/nn/basis/: README.md  __init__.py  base.py
kan/nn/global_control/: README.md
kan/nn/global_control/basis/: README.md  __init__.py  orthogonal.py
kan/nn/global_control/layers/: README.md  __init__.py  base.py  fourier.py  orthogonal.py  smooth_activation.py  wavelet.py
kan/nn/local_control/: README.md  __init__.py
kan/nn/local_control/basis/: README.md  __init__.py  bspline.py  rbf.py  smooth_activation.py
kan/nn/local_control/layers/: README.md  __init__.py  base.py  matrix.py  rbf.py  smooth_activation.py
kan/utils/: README.md  __init__.py  logging.py
poetry_venv/: pyvenv.cfg
pytorch_kan/basis/: base.py  locals.py
pytorch_kan/nn/: layers.py
src/basis/: globals.py
src/nn/: layers.py
src/pytorch_kan/: __init__.py
src/pytorch_kan/basis/: README.md  __init__.py  base.py  globals.py  locals.py
src/pytorch_kan/nn/: README.md  __init__.py  layers.py  matrixKAN.py  scaler.py
tests/: README.md  conftest.py  test_basis_global.py  test_basis_local.py  test_layers_global.py  test_layers_local.py
tests/test_basis/: test_base.py  test_orthogonal_polynomials.py
tests/test_nn/: test_layers.py  test_scalers.py
tutorials/: README.md  main.py
tutorials/mnist/: README.md  chebyshev_first.py  chebyshev_second.py  gegenbauer.py  hermite.py  jacobi.py  laguerre.py  legendre.py  matrixKAN.py
