[tool.poetry]
name = "pytorch-kan"
version = "0.1.0"
description = "Efficient and scalable implementation of Kolmogorov-Arnold Networks"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{ include = "pytorch_kan", from = "src" }]
package-mode = true
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8.1"
torch = ">=2.0.0,<3.0.0"
torchvision = ">=0.15.0,<0.22.0"
torchaudio = ">=2.0.0,<3.0.0"
numpy = ">=1.24.0,<3.0.0"
pandas = ">=1.5.0,<3.0.0"
matplotlib = ">=3.6.0,<4.0.0"
scipy = ">=1.10.0,<2.0.0"
scikit-learn = ">=1.2.0,<2.0.0"
transformers = { version = ">=4.30.0,<5.0.0", optional = true }
datasets = { version = ">=2.10.0,<4.0.0", optional = true }
jupyter = { version = ">=1.0.0,<2.0.0", optional = true }
notebook = { version = ">=6.5.0,<8.0.0", optional = true }
seaborn = { version = ">=0.12.0,<0.14.0", optional = true }
plotly = { version = ">=5.13.0,<7.0.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
hypothesis = ">=6.0.0"
black = ">=23.0.0"
isort = ">=5.10.0"
flake8 = ">=6.0.0"
flake8-docstrings = ">=1.6.0"
mypy = ">=1.0.0"
tox = ">=4.0.0"
tox-poetry = ">=0.4.0"
sphinx = ">=6.0.0"
sphinx-rtd-theme = ">=1.2.0"
myst-parser = ">=1.0.0"
sphinx-autobuild = ">=2021.3.14"
nbsphinx = ">=0.9.1"
sphinx-copybutton = ">=0.5.1"

[tool.poetry.extras]
visualization = ["matplotlib", "seaborn", "plotly"]
notebook = ["jupyter", "notebook"]
transformers = ["transformers", "datasets"]
all = ["matplotlib", "seaborn", "plotly", "jupyter", "notebook", "transformers", "datasets"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
